--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,7 +3,10 @@
 name: Testing
 
 on:
-  - push
+  push:
+    branches:
+      - '**'        # matches every branch
+
 jobs:
   EmulatorPkg:
     runs-on: ubuntu-latest
@@ -12,7 +15,7 @@ jobs:
         run: |
           DEBIAN_FRONTEND=noninteractive sudo apt-get -qq update
           DEBIAN_FRONTEND=noninteractive sudo apt-get -qqy install \
-          git python3 python3-distutils-extra build-essential nasm iasl uuid-dev libxext-dev libx11-dev 
+          git python3 python3-distutils-extra build-essential nasm iasl uuid-dev libxext-dev libx11-dev
           DEBIAN_FRONTEND=noninteractive sudo apt-get clean
           sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 1337
 
